Bug 1506439 part 1.  Fix CanRunScript analysis handling of arguments that default to null.  r=andi

Differential Revision: https://phabricator.services.mozilla.com/D23064